--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,10 @@ version: 1.0.0
 environment:
   sdk: '>=2.13.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  path: ^1.7.0
 
 dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
-  path: ^1.7.0
+
